# NBA-Fantasy-Draft-Companion

./: .gitignore  LICENSE  README.md  logging_config.py  main.py  pyproject.toml  requirements.txt
app/data/: __init__.py  db_manager.py  fetch_players.py
app/models/: __init__.py  scoring.py
app/services/: __init__.py  draft_strategy.py  user_team_service.py
app/utils/: __init__.py  filters.py  string_utils.py
backend/: logging_config.py  main.py  pyproject.toml  test.py
backend/app/data/: db_manager.py  fetch_players.py
backend/app/models/: team.py
backend/app/services/: draft_strategy.py  user_team_service.py
backend/app/utils/: config.py  string_utils.py
frontend/: .prettierrc  eslint.config.mjs  package-lock.json  package.json
frontend/public/icons/: addPlayer.tsx  chevronDown.tsx  chevronLeft.tsx  chevronRight.tsx  infoIcon.tsx  info_icon.tsx  themeIcons.tsx  trash.tsx
frontend/src/api/: index.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Dropdown.tsx  Pagination.tsx  PlayerActionModal.tsx  PlayerSearchbar.tsx  PlayerSelectionTable.tsx
frontend/src/components/buttons/: DraftPlayerButton.tsx  RemovePlayerButton.tsx
frontend/src/components/dropdowns/: Dropdown.tsx
frontend/src/components/miscellaneous/: Pagination.tsx  ThemeToggle.tsx
frontend/src/components/modals/: PlayerActionModal.tsx  WelcomeModal.tsx
frontend/src/components/searchBar/: PlayerSearchbar.tsx
frontend/src/components/tables/: DraftedPlayersTable.tsx  PlayerSelectionTable.tsx
(+1 files in other folders)
