[project]
name = "nba-draft-companion"
version = "0.1.0"
description = "A Python-based tool for NBA fantasy basketball drafting, using the 9-category (9CAT) scoring system. It helps users evaluate and draft players with optional strategies such as Percent Above Average (PAA), with custom stat weighting, and position-based filtering."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nba-api>=1.9.0",
    "pandas>=2.2.3",
]
